route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: employee-frontend
spec:
  port:
    targetPort: http
    termination: edge
  to:
    kind: Service
    name: frontend-vue
    weight: 100
  wildcardPolicy: None
